# XA-202613-Energy-Trusted-Data-Space-New

./: .env.example  .gitignore  API_DOCUMENTATION.md  CODE_REVIEW_REPORT.md  COMPETITIVE_ANALYSIS.md  Makefile  README.md  SECURITY_AUDIT_REPORT.md  SOUTH_GRID_GAP_ANALYSIS.md  TASK-LIST.md  TRUSTED_DATA_SPACE_IMPLEMENTATION_PLAN.md  check_8000.py  check_and_start.py  check_and_test.py  check_curl_local.py  check_error.py  check_errors.py  check_logs_final.py  check_middleware.py  check_port.py  check_ports.py  check_process.py  check_server_logs.py  check_server_process.py  check_startup.py  check_users_error.py  check_uvicorn_logs.py  debug_endpoints.py  debug_localhost.py  debug_upload.py  deploy.py  deploy_10.py  deploy_47.py  deploy_and_test.py  deploy_baremetal.py  deploy_continue.py  deploy_diagnose.ps1  deploy_dist.py  deploy_final.py  deploy_final_test.py  (+87 more)
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_init.py  0002_add_mfa_fields.py  0003_add_data_quality.py  0004_add_blockchain_settlement.py  0005_add_security_enhanced.py  0006_add_notification_fields.py  0006b_add_ops_enhanced.py  0007_add_mfa_sso_mqtt_tables.py  0009_add_quota_gdpr_tables.py  (+3 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  role_system.py
backend/tests/: conftest.py  test_database.py  test_fate_integration.py  test_gmssl_real.py  test_integration.py  test_mfa_service.py  test_mqtt_data_store.py  test_sso_service.py  test_websocket_manager.py
(+678 files in other folders)
